# Android-Native-Template

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/: gles.cpp  gles.h  log.cpp  log.h  main.cpp
